# MailConverter

./: .gitignore  README.md  pyproject.toml
mailconverter/: mailconverter.py
tests/: test_mailconverter.py  test_main.py
